# agentic-ai-projects

./: .env.example  .gitignore  body.json  test_agent.ps1
job_finder_agent/: agent.py
job_finder_ui/: Dockerfile  README.md  app.py  requirements.txt
sales_agent/: .env.example  README.md  agent.py  pyproject.toml
sales_agent/.adk/: session.db
sales_agent/config/: __init__.py  settings.py
sales_agent/tests/: test_alert.py  test_bq_query.py  test_config_imports.py
sales_agent/tools/: alert.py  bq_query.py  summarizer.py
squential_agent/: .env
squential_agent/.adk/: session.db
