[project]
name = "sales-agent"
version = "0.1.0"
description = "Sales Intelligence Agent built with Google ADK and BigQuery"
requires-python = ">=3.9"

dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
